# didomi-component

./: .gitignore  Cargo.toml  README.md  edgee-component.toml
.github/workflows/: check.yml  release.yml
src/: lib.rs
