[package]
name = "didomi-consent-mapping"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
wit-bindgen = "0.42.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
